# tinytsumego2

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  ab_solver.c  build_tablebase.c  complete_solver.c  compressed_solver.c  demo.c  dual_solver.c  enumerate_eyespaces.c  explore_complete_solution.c  explore_compressed.c  explore_dual.c  explore_solution.c  generate_collections.c  lib.c  main.c  mc_solver.c  public_tsumego.c  solver.c  tabulate_notchers.c  tsumego.c  verify_sym.c  verify_tablebase.c  wsbridge.py
api/: tinytsumego2.h.in
include/tinytsumego2/: bitmatrix.h  bloom.h  collection.h  complete_reader.h  complete_solver.h  compressed_graph.h  compressed_reader.h  dual_reader.h  dual_solver.h  full_reader.h  full_solver.h  keyspace.h  partial_solver.h  scoring.h  shape.h  state.h  status.h  stones.h  stones16.h  sym_solver.h  symmetry.h  tablebase.h  util.h
python/: demo.py  generate_nginx_conf.py  handler.py  lib_defs.py  lib_types.py  main.py  prod_branch.py  prod_main.py  prod_root.py
scripts/: generate_trit_table.py  migrate_dual_reader_v4_to_v5.c
src/: CMakeLists.txt  bitmatrix.c  bloom.c  collection.c  complete_reader.c  complete_solver.c  compressed_graph.c  compressed_reader.c  dual_reader.c  dual_solver.c  full_reader.c  full_solver.c  keyspace.c  partial_solver.c  scoring.c  shape.c  state.c  status.c  stones.c  stones16.c  sym_solver.c  symmetry.c  symmetry16.inc.c  tablebase.c  util.c
src/tablebase/: base.c  corner.c  edge.c  util.c
test/: CMakeLists.txt  test_bitmatrix.c  test_complete_solver.c  test_compressed_graph.c  test_dual_reader.c  test_dual_solver.c  test_full_solver.c  test_keyspace.c  test_partial_solver.c  test_scoring.c  test_shape.c  test_state.c  test_status.c  test_stones.c  test_symmetry.c  test_tablebase.c  test_util.c
